--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "autoprefixer": "^10.4.14",
+    "hardhat": "^2.13.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
