--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.2",
     "autoprefixer": "^10.4.14",
+    "dotenv": "^16.0.3",
     "hardhat": "^2.13.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
