--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,6 @@ NEXT_PUBLIC_NETWORK_CHAINNAME='Goerli'
 NEXT_PUBLIC_WHITELIST_ADDRESS='0x00000'
 PRIVATE_KEY='key'
 NETWORK_RPC=''
+GOOGLE_SHEETS_PRIVATE_KEY=''
+GOOGLE_SHEETS_CLIENT_EMAIL=''
 GOOGLE_DRIVE_SPREADSHEET=''
