--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ NETWORK_RPC=''
 GOOGLE_SHEETS_PRIVATE_KEY=''
 GOOGLE_SHEETS_CLIENT_EMAIL=''
 GOOGLE_DRIVE_SPREADSHEET=''
+ALCHEMY_URL=''
+JWT_SECRET=''
