--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-next": "13.2.4",
     "ethers": "5.7.2",
     "googleapis": "^114.0.0",
+    "jsonwebtoken": "^9.0.0",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
