--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.8.2",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "ethers": "5.7.2",
