wip: init mint nft on frontend

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 NEXT_PUBLIC_NETWORK_CHAINID=5
 NEXT_PUBLIC_NETWORK_CHAINNAME='Goerli'
 NEXT_PUBLIC_WHITELIST_ADDRESS='0x00000'
+NEXT_PUBLIC_LOGIN_NFT_ADDRESS='0x00000'
 PRIVATE_KEY='key'
 NETWORK_RPC=''
 GOOGLE_SHEETS_PRIVATE_KEY=''
@@ -8,3 +9,4 @@ GOOGLE_SHEETS_CLIENT_EMAIL=''
 GOOGLE_DRIVE_SPREADSHEET=''
 ALCHEMY_URL=''
 JWT_SECRET=''
+ETHERSCAN_KEY=''
